# HoldRect

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install.ps1
.github/workflows/: release.yml
docs/: MISTAKE.md  PRD.md  index.html  pm.md  style.css
docs/superpowers/plans/: 2026-06-22-v0.1-implementation.md  2026-06-22-win32-input-hooks.md  2026-06-23-autostart-tray-toggle.md  2026-06-23-gdi-rendering.md  2026-06-23-pinned-mode.md  2026-06-23-spotlight-mode.md  2026-06-23-v0.2-config-rainbow.md  2026-06-24-github-distribution.md  2026-06-24-hotreload-memory.md  2026-06-24-popup-apple-style.md  2026-06-24-popup-system.md  2026-06-25-hero-stroke-animation.md  2026-06-25-landing-page.md  2026-06-25-magnifier-implementation.md  2026-06-29-single-instance-popup-plan.md  2026-07-20-holdrect-cli.md  2026-07-20-transient-rectangle-fade.md
docs/superpowers/specs/: 2026-06-22-v0.1-design.md  2026-06-22-win32-input-hooks-design.md  2026-06-23-autostart-tray-toggle-design.md  2026-06-23-gdi-rendering-design.md  2026-06-23-pinned-mode-design.md  2026-06-23-spotlight-mode-design.md  2026-06-23-v0.2-config-rainbow-design.md  2026-06-24-github-distribution-design.md  2026-06-24-hotreload-memory-design.md  2026-06-24-popup-apple-style-design.md  2026-06-24-popup-design.md  2026-06-25-hero-stroke-animation.md  (+5 more)
src/: autostart.rs  cli.rs  config.rs  hook.rs  input.rs  ipc.rs  magnifier.rs  main.rs  mem_report.rs  overlay.rs  single_instance.rs  state.rs  tray.rs
src/popup/: animation.rs  gdi_renderer.rs  mod.rs
