[package]
name = "holdrect"
version = "0.1.0"
edition = "2021"
authors = ["WodenJay <wodenjay@gmail.com>"]
description = "Lightweight rubber-band highlight rectangle for screen recording"

[dependencies]
winit = "0.30"
softbuffer = "0.4"

tray-icon = "0.14"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_HiDpi",
] }
