[package]
name = "holdrect"
version = "0.1.0"
edition = "2021"
authors = ["WodenJay <wodenjay@gmail.com>"]
description = "Lightweight rubber-band highlight rectangle for screen recording"

[dependencies]
winit = "0.30"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"

tray-icon = "0.14"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_System_Threading",
] }

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = "s"
